fixed center spacing issues in nav and gallery

--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,9 @@ nav a {
     font-weight: 700;
 }
 
+nav ul {
+    padding:0px;
+}
 
 /*******************************
 FOOTER
@@ -104,6 +107,11 @@ PAGE: PORTFOLIO
     padding: 5%;
     font-size: .75em;
     margin: 0px;
+}
+
+#gallery {
+    margin: 0px;
+    padding: 0px;
 }
 
 /*******************************
